@@ -2,6 +2,9 @@ API.txt: $Id$
 
 This file contains a log of changes to the API.
 
+API version 1.3:
+  Introduce ctools_jump_menu().
+
 API version 1.2:
   Introduce ctools_set_variable_token().
   Introduce ctools_set_callback_token().
