@@ -1,9 +1,10 @@
-Current API VERSION: 1.2. See API.txt for more information.
+Current API VERSION: 1.3. See API.txt for more information.
 
 ctools 6.x-1.x-dev
 ==================
 #612850: Fix crash bug with panes referencing deleted/missing views.
 #595442: Fix AJAX problems with mod_security enabled.
+Introduce a "jump menu" tool which can be used to provide jump menus with a select.
 
 ctools 6.x-1.2
 ==============
